<resources>
    <string name="app_name">MyTaxiTestTask</string>
    <string name="mapbox_access_token">sk.eyJ1IjoibnVybGliYXkiLCJhIjoiY2xlenRucHJlMDJsNTN4cHBzeDR4dzl5cCJ9.u10bkqv7rs5NlyfgE8N-jg</string>
    <string name="free">Свободен</string>
    <string name="busy">Занят</string>
    <string name="orders">Зазказы</string>
    <string name="border">Бордюр</string>
    <string name="tarif">Тарифы</string>

    <!--Basic user location permission toasts-->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <string name="settings">Настройки</string>

    <string name="fine_permission_denied_explanation">В разрешении на определение точного местоположения было отказано, но оно необходимо для основных функций.</string>
    <string name="permission_approved_explanation">Permission approved!</string>
    <string name="enable_location">Включить местоположение</string>
    <string name="enable_location_message">GPS отключен.\nПожалуйста, включите геолокацию</string>
    <string name="location_settings">Включить</string>
    <string name="cancel">Отмена</string>
    <string name="where_to">Куда?</string>
    <string name="help">Помощь</string>
    <string name="driver">Водитель</string>

</resources>