<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="40.7128"
        mapbox:mapbox_cameraTargetLng="-74.0060"
        mapbox:mapbox_cameraZoom="9.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_menu"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_notif"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/white"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_notification"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_menu"
        app:layout_constraintEnd_toStartOf="@id/btn_notif"
        app:layout_constraintStart_toEndOf="@id/btn_menu"
        app:layout_constraintTop_toTopOf="@id/btn_menu">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:background="@color/color_green">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/free"
                    android:textColor="@color/white" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:background="@color/white">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/busy"
                    android:textColor="@color/black" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_flash"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_flash"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="#3D50DF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_zoom_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_zoomin"
        app:layout_constraintEnd_toEndOf="@id/btn_notif"
        app:layout_constraintTop_toBottomOf="@id/btn_flash" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_zoom_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_zoomout"
        app:layout_constraintEnd_toEndOf="@id/btn_notif"
        app:layout_constraintTop_toBottomOf="@id/btn_zoom_in" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_my_location_normal"
        app:layout_constraintEnd_toEndOf="@id/btn_notif"
        app:layout_constraintTop_toBottomOf="@id/btn_zoom_out" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_order"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:backgroundTint="#2F2F2F"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                app:cornerRadius="28dp"
                app:icon="@drawable/ic_exchange"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
                tools:ignore="UnusedAttribute" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center"
                android:text="@string/orders"
                android:textColor="#1E1E1E" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_rocket"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:backgroundTint="#2F2F2F"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                app:cornerRadius="28dp"
                app:icon="@drawable/ic_rocket"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
                tools:ignore="UnusedAttribute" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center"
                android:text="@string/border"
                android:textColor="#1E1E1E" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tarif"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:backgroundTint="#2F2F2F"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                app:cornerRadius="28dp"
                app:icon="@drawable/ic_tarif"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
                tools:ignore="UnusedAttribute" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center"
                android:text="@string/tarif"
                android:textColor="#1E1E1E" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>